# empire

./: .gitignore  Cargo.toml  README.md
empire/: Cargo.toml
empire/src/: comm.rs  error.rs  info.rs  lib.rs  port.rs  registrar.rs  universe.rs
examples/: CMakeLists.txt  hello_mpi.c  info.cpp  open_port.c  spawn_self.cpp  spawn_self_w.cpp
libempire/: Cargo.toml
libempire/examples/c/: hello_mpi.c
libempire/include/: mpi.h
libempire/src/: comm.rs  constants.rs  handles.rs  info.rs  init.rs  lib.rs  port.rs  spawn.rs  status.rs
libempire/src/windows/: mod.rs
mpiexec/: Cargo.toml
mpiexec/src/: cli.yml  main.rs
