[package]
name = "empire"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]

[dependencies]
futures = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
node-rs = "0.1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "0.1"
tokio-process = { git = "https://github.com/alexcrichton/tokio-process.git" }